# Haunt

./: .env.example  .gitignore  Cargo.toml  FEATURES.md  PHASE1_STATUS.md  TUI_README.md  TradingPlan.md  haunt.db  package-lock.json  package.json  tsconfig.json
.haunt_cache/: cmc_listings_1_10.json  cmc_listings_1_100.json  cmc_listings_1_20.json  cmc_listings_1_50.json  cmc_listings_2_20.json
docs/: BACKEND_REFACTORING_ANALYSIS.md  README.md  _sidebar.md  api-reference.md  data-flow.md  haunt-api.postman_collection.json  index.html  paperbot-traders.md  trading-api.md  websocket-protocol.md
docs/Development/: WIRE_ME.md
docs/postman/: haunt-api.postman_collection.json
scripts/: deploy-full.sh  deploy.sh
src/: app.ts  config.rs  error.rs  index.ts  lib.rs  main.rs
src/api/: auth.rs  bots.rs  crypto.rs  developer.rs  exchange_metrics.rs  gridline.rs  health.rs  market.rs  mod.rs  notifications.rs  orderbook.rs  peers.rs  signals.rs  storage.rs  sync.rs  trading.rs  user.rs  username.rs
src/routes/: crypto.ts  health.ts  index.ts  market.ts
src/schemas/: crypto.ts  market.ts  websocket.ts
src/services/: asset_service.rs  auth.rs  backtester.rs  cache.rs  cache.ts  chart_store.rs  coinmarketcap.ts  data_sync.rs  exchange_metrics.rs  file_cache.rs  gridline.rs  historical.rs  mod.rs  (+17 more)
tests/: api_comparison_test.rs  api_sanity_test.rs  api_test.rs  crypto_integration_test.rs  peer_mesh_test.rs  services_test.rs  signals_test.rs  sync_integration.rs  trading_integration_test.rs  trading_test.rs  types_test.rs  websocket_test.rs  websocket_validation_test.rs
(+84 files in other folders)
