[package]
name = "haunt"
version = "0.1.0"
edition = "2021"
description = "High-performance cryptocurrency price aggregation server"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Concurrent data structures
dashmap = "5.5"

# Redis for persistent caching
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Environment variables
dotenvy = "0.15"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# SQLite for persistent storage
rusqlite = { version = "0.31", features = ["bundled"] }

# Cryptography for signature verification
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
hex = "0.4"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
